--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@ body {
     }
 
     
-
 .flex-social {
 
     display: flex;
@@ -70,7 +69,8 @@ body {
 .a-hover:hover {
 
     color:brown;
-    
+
+}
     
      
 
