--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Roboto:wght@300&display=swap');
 
 * {
-    margin: 2px;
-    box-sizing: border-box;
+    margin: 0px;
+    box-sizing:border-box;
 }
 
 body {
-    background: url(https://images5.alphacoders.com/104/1043977.jpg);
+
+    background: url(images/lake-night.jpg);
     background-size: cover;
-    }   
+       
+    } 
     
-    .link-heather {
-        all:unset;
-        color: white;
-        font-family: 'Caveat', cursive;
-        font-size: 50px;
-        }
+.flex-container {
 
-    .flex-container {
-
-        display: flex;
-        justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
+    
         
     } 
+    
+.link-heather {
+    all:unset;
+    color: white;
+    font-family: 'Caveat', cursive;
+    font-size: 50px;
+    cursor: pointer;
+            
+        }
+
+.link-heather:hover {
+
+    color: chocolate;
+        
+
+        }
 
 .my_name, h1, h2, p {
     font-family: 'Caveat', cursive; 
@@ -45,7 +57,7 @@ body {
     background: rgba(0,0,0, .4);
     margin: 0 auto;
     margin-top: 2%;
-    padding: 30px;
+    padding: 10px;
     text-align: center;
     
     }
@@ -54,9 +66,11 @@ body {
 .flex-social {
 
     display: flex;
-    justify-content:center;
-    font-size: 65px;
-    padding: 10px;
+    justify-content:space-evenly;
+    font-size: 80px;
+    padding: 20px;
+    height: 40px;
+    width: auto;
     
 }
 
@@ -64,13 +78,19 @@ body {
     color: white;
 
 }
-    
+
 
 .a-hover:hover {
 
-    color:brown;
+    color:blue;
 
 }
+
+
+
+
+
+
     
      
 
