--- a/contact.css
+++ b/contact.css
@@ -1,25 +1,59 @@
 * {
-    margin: 0%;
+    margin:  0%;
     padding: 0%;
-    box-sizing: border-box;
+    box-sizing:border-box;
+     
+     
 }
 
 body {
 
     background-image: url(/images/fondo_form.jpg);
+
 }
+
+    
+.flex-container {
+
+    display: flex;
+    justify-content: space-around;
+    
+        
+    } 
+    
+.link-heather {
+    all:unset;
+    color: white;
+    font-family: 'Caveat', cursive;
+    font-size: 50px;
+    cursor: pointer;
+            
+        }
+
+.link-heather:hover {
+
+    color: chocolate;
+        
+
+    }
+    
+            
+    
+     
+
 
 .form-register {
 
     width: 400px;
     background: #121a22;
-    padding: 40px;
+    padding: 30px;
     margin: auto;
     margin-top:150px;
     border-radius: 4px ;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     box-shadow: 7px 13px 37px #000;
+     
    
 }
 
