--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+
 * {
     margin: o;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
@@ -10,19 +14,34 @@ body {
    font-family: sans-serif;
    letter-spacing: 0,03em;
    line-height: 1.6;
+   background: url(./images/acurela.jpg);
+   background-size:cover; 
    
-   
+}
+
+
+.flex-container {
+
+    all: unset;
+    display: flex;
+    justify-content: space-around;
+    font-family:'Sacramento', cursive;
+    font-size: 60px;
+    
+
 }
 
 
 
 .title {
 
+    padding: 10px;
     text-align: center;
-    font-size: 40px;
+    font-size: 80px;
     color: #6a6a6a;
     margin-top: 50px;
     font-weight: 100;
+    font-family: 'Great Vibes', cursive;
     
 }
 
@@ -35,8 +54,9 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
-    
+         
 }
+
 
 .container .card {
 
@@ -51,10 +71,21 @@ transition: all 0.25s;
 
 }
 
+.card {
+
+    background-color:rgb(173, 206, 240);
+    font-family: 'Great Vibes', cursive;
+    font-size: 22px;
+     
+     
+    
+}
+
 .container .card:hover {
 
     transform: translateY(-15px);
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+     
 
 }
 
@@ -74,8 +105,17 @@ transition: all 0.25s;
     padding: 0 1rem;
     font-size: 16px;
     font-weight: 300;
-
-    
+   
 }
+
+video {
+    padding: 20px;
+
+
+}
+
+
+
+
 
 
