--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Roboto:wght@300&display=swap');
+ 
 
 * {
     margin: 0px;
@@ -85,6 +86,12 @@ body {
     color:blue;
 
 }
+
+{@media (max-width:320px)}
+ 
+
+
+
 
 
 
